--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-
+{
+  "name": "ecommerce-website",
+  "version": "1.0.0",
+  "description": "A simple e-commerce website",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
+}
